@@ -83,17 +83,107 @@ and <code>javax.security.cert</code> support), we recommend
 <!-- News entries start here -->
 
 <tr><td valign="top">
+<b>May 1, 2006</b>
+</td><td>
+The May 2006 issue of Linux Journal contains the article &quot;<a
+href="http://www.linuxjournal.com/article/8757">Embedded Java with
+GCJ</a>&quot; by Gene Sally.
+</td></tr>
+
+<tr><td valign="top">
+<b>April 26, 2006</b>
+</td><td>
+Andrew Haley has merged in a <a
+href="http://gcc.gnu.org/ml/java-patches/2006-q2/msg00100.html">patch</a>
+that eliminates conservative scanning of static data and considerably speeds
+up garbage collection in many cases (for example, halving the time spent in
+garbage collection when running <a href="http://www.eclipse.org/">Eclipse</a>).
+</td></tr>
+
+<tr><td valign="top">
+<b>April 17, 2006</b>
+</td><td>
+Tom Tromey has <a
+href="http://gcc.gnu.org/ml/java/2006-04/msg00046.html">announced</a> the
+availability of two experimental Just-In-Time (JIT) interpreters for GCJ based
+on <a href="http://www.southern-storm.com.au/libjit.html">libjit</a> and <a
+href="http://llvm.org/">LLVM</a> respectively. The source code for these
+JITs is available via the &quot;gcj-jit&quot; module of the <a
+href="http://sources.redhat.com/rhug/source.html">rhug CVS repository</a> (<a
+href="http://sources.redhat.com/cgi-bin/cvsweb.cgi/gcj-jit/?cvsroot=rhug">CVSweb
+interface</a>).
+</td></tr>
+
+<tr><td valign="top">
+<b>April 4, 2006</b>
+</td><td>
+<code>fastjar</code> has been removed from the GCC source tree and made into
+<a href="http://savannah.nongnu.org/projects/fastjar">a separate project</a>.
+The GCJ build process now requires an external tool for creating JARs - it
+searches for a tool named either <code>jar</code> or <code>fastjar</code>
+during configuration and reports an error if it is unable to find such a tool.
+</td></tr>
+
+<tr><td valign="top">
+<b>March 15, 2006</b>
+</td><td>
+David Daney has merged in a <a
+href="http://gcc.gnu.org/ml/java-patches/2006-q1/msg00289.html">patch</a> that
+adds the new <code>-freduced-reflection</code> option to GCJ. This option
+prevents GCJ from generating most of the reflection metadata for classes
+resulting in smaller binaries. There are some caveats to using this option 
+though - please read the GCJ manual for the implications of using this option.
+</td></tr>
+
+<tr><td valign="top">
 <b>March 9, 2006</b>
 </td><td>
 Mark Wielaard has imported <a
-href="http://www.gnu.org/software/classpath/">GNU Classpath</a> 0.90 into GCJ.
+href="http://www.gnu.org/software/classpath/">GNU Classpath</a> 0.90 (<a
+href="http://www.gnu.org/software/classpath/announce/20060306.html">release
+notes</a>) into GCJ.
 </td></tr>
 
 <tr><td valign="top">
 <b>February 8, 2006</b>
 </td><td>
 Mark Wielaard has written &quot;<a href="http://lwn.net/Articles/171139/">A
-look at GCJ 4.1</a>&quot; for <a href="http://lwn.net/">LWN.net</a>.
+look at GCJ 4.1</a>&quot; for LWN.net.
+</td></tr>
+
+<tr><td valign="top">
+<b>January 16, 2006</b>
+</td><td>
+Mark Wielaard has imported <a
+href="http://www.gnu.org/software/classpath/">GNU Classpath</a> 0.20 (<a
+href="http://www.gnu.org/software/classpath/announce/20060113.html">release
+notes</a>) into GCJ.
+</td></tr>
+
+<tr><td valign="top">
+<b>November 17, 2005</b>
+</td><td>
+Mark Wielaard has imported <a
+href="http://www.gnu.org/software/classpath/">GNU Classpath</a> 0.19 (<a
+href="http://www.gnu.org/software/classpath/announce/20051102.html">release
+notes</a>) into GCJ.
+</td></tr>
+
+<tr><td valign="top">
+<b>October 12, 2005</b>
+</td><td>
+The October 2005 issue of Red Hat Magazine contains the article &quot;<a
+href="http://www.redhat.com/magazine/012oct05/features/java/">The state of
+Java on Linux</a>&quot; by Tom Tromey.
+</td></tr>
+
+<tr><td valign="top">
+<b>September 23, 2005</b>
+</td><td>
+Tom Tromey has imported <a
+href="http://www.gnu.org/software/classpath/">GNU Classpath</a> 0.18 (<a
+href="http://www.gnu.org/software/classpath/announce/20050906.html">release
+notes</a>) into GCJ.
 </td></tr>
 
 <tr><td valign="top">
@@ -104,7 +194,10 @@ href="http://gcc.gnu.org/ml/java-patches/2005-q3/msg00093.html">integrated</a>
 <a href="http://www.gnu.org/software/classpath/">GNU Classpath</a> into the
 GCJ build in such a way that it becomes <a
 href="http://gcc.gnu.org/ml/java/2005-05/msg00202.html">much easier</a> to
-import the latest GNU Classpath into GCJ.
+import the latest GNU Classpath into GCJ. This particular import brings in GNU
+Classpath 0.17 (<a
+href="http://www.gnu.org/software/classpath/announce/20050715.html">release
+notes</a>).
 </td></tr>
 
 <tr><td valign="top">
@@ -112,7 +205,7 @@ import the latest GNU Classpath into GCJ.
 </td><td>
 Mark Wielaard has written &quot;<a
 href="http://lwn.net/Articles/130796/">GCJ - past, present, and
-future</a>&quot; for <a href="http://lwn.net/">LWN.net</a>.
+future</a>&quot; for LWN.net.
 </td></tr>
 
 <tr><td valign="top">
@@ -151,7 +244,7 @@ to enable libjava to be built by default on hppa-unknown-linux-gnu.
 <tr><td valign="top">
 <b>November 22, 2004</b>
 </td><td>
-We're pleased to announce that the gcj binary compatibility branch has
+We're pleased to announce that the GCJ binary compatibility branch has
 been merged to the trunk.  This work includes a new ABI which allows
 precompiled code to follow the binary compatibility rules of the Java
 programming language.
