@@ -1,3 +1,7 @@
+2006-05-15  Ranjit Mathew  <rmathew@gcc.gnu.org>
+
+	* index.html: Add some more back-dated news entries.
+
 2006-05-12  Ranjit Mathew  <rmathew@gcc.gnu.org>
 
 	* index.html: Add back-dated news entries to reflect ongoing
